# faults-test-suite

./: CMakeLists.txt  README.md
cmake/: build-test-2.cmake  build-test.cmake  buildtest.cmake  configure-suite.cmake  flags.cmake  functions.cmake
configs/: CMakeLists.txt  cover.encoded.cfg  cover.plain.cfg  encoded.cover.cfg  encoded.veri.cfg  plain.cover.cfg  veri.cfg  verify-cover.cfg
tests/: CMakeLists.txt
tests/array_sum/: CMakeLists.txt  array_sum.enc.c  array_sum.input.c  array_sum.main.c  generate.c
tests/array_sum/configs/: CMakeLists.txt  array_sum.encoded.cover.cfg  array_sum.encoded.veri.cfg  array_sum.plain.cover.cfg
tests/bubblesort.best/: CMakeLists.txt  bubblesort.best.enc.c  bubblesort.best.main.c  generate.c
tests/bubblesort.best/configs/: CMakeLists.txt  bubblesort.best.encoded.cover.cfg  bubblesort.best.encoded.veri.cfg  bubblesort.best.plain.cover.cfg
tests/bubblesort.random/: CMakeLists.txt  bubblesort.random.main.c  generate.c
tests/bubblesort.random-binary/: CMakeLists.txt  bubblesort.random-binary.enc.c  bubblesort.random-binary.main.c  generate.c
tests/bubblesort.random-binary/configs/: CMakeLists.txt  bubblesort.random-binary.encoded.cover.cfg  bubblesort.random-binary.encoded.veri.cfg  bubblesort.random-binary.plain.cover.cfg
tests/bubblesort.random/configs/: CMakeLists.txt  bubblesort.random.encoded.cover.cfg  bubblesort.random.encoded.veri.cfg  bubblesort.random.plain.cover.cfg
tests/bubblesort.worst/: CMakeLists.txt  bubblesort.worst.input.c  bubblesort.worst.main.c  generate.c
tests/bubblesort.worst/configs/: CMakeLists.txt  bubblesort.worst.encoded.cover.cfg  bubblesort.worst.encoded.veri.cfg  bubblesort.worst.plain.cover.cfg
tests/crc/: CMakeLists.txt  crc.crc_32_tab.c  crc.enc.c  crc.main.c  crc_32_tab.c  generate.c
tests/crc/configs/: CMakeLists.txt  crc.encoded.cover.cfg  crc.encoded.veri.cfg  crc.plain.cover.cfg
tests/des/: CMakeLists.txt  des.enc.c  des.main.c  generate.c  input.huge.c  input.large.c  input.small.c  input.tiny.c
tests/des/configs/: CMakeLists.txt  des.encoded.cover.cfg  des.encoded.veri.cfg  des.plain.cover.cfg
tests/dijkstra/: CMakeLists.txt  dijkstra.adjacency.c  dijkstra.enc.c  dijkstra.main.c  generate.c
tests/dijkstra/configs/: CMakeLists.txt  dijkstra.encoded.cover.cfg  dijkstra.encoded.veri.cfg  dijkstra.plain.cover.cfg
tests/expr/: CMakeLists.txt  expr.enc.c  expr.input.c  expr.main.c  generate.c
tests/expr/configs/: CMakeLists.txt  expr.all.encoded.cover.cfg  expr.all.plain.cover.cfg  expr.encoded.veri.cfg  expr.eval.encoded.cover.cfg  expr.eval.plain.cover.cfg  expr.lex.encoded.cover.cfg  expr.lex.plain.cover.cfg  expr.parse.encoded.cover.cfg  expr.parse.plain.cover.cfg
tests/fibonacci/: CMakeLists.txt  fibonacci.enc.c  fibonacci.main.c
tests/fibonacci/configs/: CMakeLists.txt  fibonacci.encoded.cover.cfg  fibonacci.encoded.veri.cfg  fibonacci.plain.cover.cfg
tests/matmul/: CMakeLists.txt  matmul.enc.c  matmul.main.c  populate.c  vector.c
tests/matmul/configs/: CMakeLists.txt  matmul.encoded.cover.cfg  matmul.encoded.veri.cfg  matmul.plain.cover.cfg
tests/matmul_overflow/: CMakeLists.txt  matmul_overflow.main.c  matmul_overflow.vector.c  populate.c
tests/matmul_overflow/configs/: CMakeLists.txt  matmul_overflow.encoded.cover.cfg  matmul_overflow.encoded.veri.cfg  matmul_overflow.plain.cover.cfg
tests/matmul_while/: CMakeLists.txt  matmul_while.enc.c  matmul_while.main.c  populate.c
tests/matmul_while/configs/: CMakeLists.txt  matmul_while.encoded.cover.cfg  matmul_while.encoded.veri.cfg  matmul_while.plain.cover.cfg
tests/ptrarith/: CMakeLists.txt  generate.c  ptrarith.enc.c  ptrarith.main.c  ptrarith.source.c
tests/ptrarith/configs/: CMakeLists.txt  ptrarith.encoded.cover.cfg  ptrarith.encoded.veri.cfg  ptrarith.plain.cover.cfg
tests/quicksort.best/: CMakeLists.txt  generate.c  quicksort.best.input.c  quicksort.best.main.c
tests/quicksort.best/configs/: CMakeLists.txt  quicksort.best.encoded.cover.cfg  quicksort.best.encoded.veri.cfg  quicksort.best.plain.cover.cfg
tests/quicksort.random/: CMakeLists.txt  generate.c  quicksort.random.input.c  quicksort.random.main.c
tests/quicksort.random-binary/: CMakeLists.txt  generate.c  quicksort.random-binary.enc.c  quicksort.random-binary.input.c  quicksort.random-binary.main.c
tests/quicksort.random-binary/configs/: CMakeLists.txt  quicksort.random-binary.encoded.cover.cfg  quicksort.random-binary.encoded.veri.cfg  quicksort.random-binary.plain.cover.cfg
tests/quicksort.random/configs/: CMakeLists.txt  quicksort.random.encoded.cover.cfg  quicksort.random.encoded.veri.cfg  quicksort.random.plain.cover.cfg
tests/quicksort.worst/: CMakeLists.txt  generate.c  quicksort.worst.enc.c  quicksort.worst.main.c
tests/quicksort.worst/configs/: CMakeLists.txt  quicksort.worst.encoded.cover.cfg  quicksort.worst.encoded.veri.cfg  quicksort.worst.plain.cover.cfg
tests/rec_copy.head/: CMakeLists.txt  generate.c  rec_copy.head.enc.c  rec_copy.head.main.c
tests/rec_copy.head/configs/: CMakeLists.txt  rec_copy.head.encoded.cover.cfg  rec_copy.head.encoded.veri.cfg  rec_copy.head.plain.cover.cfg
tests/rec_copy.tail/: CMakeLists.txt  generate.c  rec_copy.tail.enc.c  rec_copy.tail.main.c
tests/rec_copy.tail/configs/: CMakeLists.txt  rec_copy.tail.encoded.cover.cfg  rec_copy.tail.encoded.veri.cfg  rec_copy.tail.plain.cover.cfg
transformations/: CMakeLists.txt  no-enc-inline.cpp
utility/: CMakeLists.txt  encode.h  myargs.c  myargs.h  mycheck.c  mycyc.c  mycyc.h
